[package]
name = "knot-sdk"
version = "0.1.0"
edition = "2024"
description = "Knot P2P SDK"
license = "Apache-2.0"
repository = "https://github.com/flipps12/rust-knot"

[lib]
name = "knot_sdk"
path = "src/lib.rs"

[dependencies]
bs58 = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }